third_party/move/move-compiler-v2/tests/bytecode-generator/wildcard7.exp

Diagnostics:
warning: Unused local variable `q`. Consider removing or prefixing with an underscore: `_q`
  ┌─ tests/bytecode-generator/wildcard7.move:6:17
  │
6 │         let (_, q) = (x, z);
  │                 ^

// -- Model dump before bytecode pipeline
module 0xc0ffee::m {
    public fun test(): u8 {
        {
          let x: u8 = 40;
          {
            let y: u8 = Move(x);
            {
              let (_: u8, q: u64): (u8, u64) = Tuple(x, 30);
              y
            }
          }
        }
    }
} // end 0xc0ffee::m

============ initial bytecode ================

[variant baseline]
public fun m::test(): u8 {
     var $t0: u8
     var $t1: u8
     var $t2: u8
     var $t3: u8
     var $t4: u8
     var $t5: u64
     var $t6: u8
     var $t7: u64
  0: $t2 := 40
  1: $t1 := infer($t2)
  2: $t4 := move($t1)
  3: $t3 := infer($t4)
  4: $t6 := infer($t1)
  5: $t7 := 30
  6: $t5 := infer($t7)
  7: $t0 := infer($t3)
  8: return $t0
}


Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/bytecode-generator/wildcard7.move:5:17
  │
5 │         let y = move x;
  │                 ^^^^^^ attempted to move here
6 │         let (_, q) = (x, z);
  │              - used here
